<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/forThread"
        android:layout_width="144dp"
        android:layout_height="30dp"
        android:text="@string/forThread"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/threadPwdCount"
        android:layout_width="209dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/threadPwdCount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/threadCount"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forThread" />

    <TextView
        android:id="@+id/threadPwdLength"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/threadPwdLength"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threadCountSeekBar" />

    <TextView
        android:id="@+id/forAsyncTask"
        android:layout_width="208dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="108dp"
        android:text="@string/forAsyncTask"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threadLengthSeekBar" />

    <TextView
        android:id="@+id/asyncCount"
        android:layout_width="31dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="256dp"
        android:text="@string/asynccount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toEndOf="@+id/asyncPwdCount"
        app:layout_constraintTop_toBottomOf="@+id/forAsyncTask"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/asyncPwdCount"
        android:layout_width="202dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="228dp"
        android:text="@string/asyncpwdCount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forAsyncTask"
        app:layout_constraintVertical_bias="0.067" />

    <SeekBar
        android:id="@+id/threadCountSeekBar"
        android:layout_width="384dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threadPwdCount" />

    <TextView
        android:id="@+id/threadCount"
        android:layout_width="31dp"
        android:layout_height="35dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="28dp"
        android:text="@string/threadcount"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/threadPwdCount"
        app:layout_constraintTop_toBottomOf="@+id/forThread" />

    <SeekBar
        android:id="@+id/threadLengthSeekBar"
        android:layout_width="382dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threadPwdLength" />

    <TextView
        android:id="@+id/threadLength"
        android:layout_width="31dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/threadlength"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toEndOf="@+id/threadPwdLength"
        app:layout_constraintTop_toBottomOf="@+id/threadCountSeekBar" />

    <SeekBar
        android:id="@+id/asyncCountSeekBar"
        android:layout_width="378dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asyncPwdCount" />

    <TextView
        android:id="@+id/asyncPwdLength"
        android:layout_width="213dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="52dp"
        android:text="@string/asyncPwdLength"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asyncCountSeekBar"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/asyncLength"
        android:layout_width="31dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="96dp"
        android:text="@string/asynclength"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toEndOf="@+id/asyncPwdLength"
        app:layout_constraintTop_toBottomOf="@+id/asyncCountSeekBar"
        app:layout_constraintVertical_bias="0.059" />

    <SeekBar
        android:id="@+id/asyncLengthSeekBar"
        android:layout_width="374dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asyncPwdLength"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/generate"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/generate"
        android:textColor="#FFFFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asyncLengthSeekBar"
        app:layout_constraintVertical_bias="0.026" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generatingPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/progressPercent"
        android:layout_width="62dp"
        android:layout_height="50dp"
        android:layout_marginStart="340dp"
        android:layout_marginBottom="276dp"
        android:text="@string/progressPercent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <TextView
        android:id="@+id/progressPercentLeft"
        android:layout_width="66dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <TextView
        android:id="@+id/generatingPassword"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:lineSpacingExtra="8sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/back"
        android:text="@string/genaratingPasswords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threadLengthSeekBar" />

</android.support.constraint.ConstraintLayout>
    <!--
       Assignment: Homework 02
       File Name : GROUP15_HW02.zip
       Full Name : Manideep Reddy Nukala, Sai Charan Reddy Vallapureddy
       -->